--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "bin": {},
   "man": "",
   "start": "node out/testSite/RunTestServer.js",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "passport": "^0.4.0"
+  },
   "devDependencies": {
+    "@types/body-parser": "^1.16.5",
     "@types/bunyan": "^1.8.2",
     "@types/chai": "^4.0.4",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.43",
     "@types/node": "^7.0.43",
+    "@types/passport": "^0.3.4",
     "@types/request": "^2.0.3",
     "@types/request-promise-native": "^1.0.6",
     "@types/rimraf": "^2.0.2",
