Move to EJS for site templating. Wire up SQRL URL to login page

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,6 @@
             "type": "node",
             "request": "launch",
             "program": "${workspaceRoot}/out/testSite/RunTestSiteServer.js",
-            "stopOnEntry": false,
-            "args": [],
             "cwd": "${workspaceRoot}/out/testSite",
             "preLaunchTask": "build",
             "runtimeExecutable": null,
@@ -26,7 +24,7 @@
             "name": "Profile",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/out/testSite/RunTestSiteServer.js",
+            "program": "${workspaceRoot}/out/testSite/RunTestSiteServer",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}/out/testSite",
