--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/body-parser": "^1.16.5",
     "@types/bunyan": "^1.8.2",
     "@types/chai": "^4.0.4",
+    "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.43",
     "@types/node": "^7.0.43",
@@ -36,8 +37,11 @@
     "@types/request-promise-native": "^1.0.6",
     "@types/rimraf": "^2.0.2",
     "@types/serve-favicon": "^2.2.29",
+    "bunyan": "^1.8.12",
     "chai": "^4.1.2",
     "del": "^3.0.0",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^4.3.1",
