--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,40 +6,21 @@
             "name": "IntegrationTestSite",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/out/testSite/RunTestSiteServer.js",
+            "program": "${workspaceRoot}/out/testSite/RunNodeTestSiteServer.js",
             "cwd": "${workspaceRoot}/out/testSite",
-            "preLaunchTask": "build",
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "console": "internalConsole",
-            "sourceMaps": false,
-            "outFiles": []
+            "preLaunchTask": "build"
         },
         {
             "name": "Profile",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/out/testSite/RunTestSiteServer",
-            "stopOnEntry": false,
-            "args": [],
+            "program": "${workspaceRoot}/out/testSite/RunNodeTestSiteServer",
             "cwd": "${workspaceRoot}/out/testSite",
             "preLaunchTask": "build",
-            "runtimeExecutable": null,
             "runtimeArgs": [
                 "--nolazy",
                 "--prof"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "console": "integratedTerminal",
-            "sourceMaps": false,
-            "outFiles": []
+            ]
         },
         {
             "name": "Attach to Test Site",
@@ -52,14 +33,6 @@
             "outFiles": [],
             "localRoot": "${workspaceRoot}/out/testSite",
             "remoteRoot": null
-        },
-        {
-            "name": "Mocha Test",
-            "type": "node",
-            "request": "launch",
-            "cwd": "${workspaceRoot}/out/testSiteTests",
-            "port": 5858,
-            "sourceMaps": false
         }
     ]
 }
