--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^7.0.43",
     "@types/passport": "^0.3.4",
     "@types/passport-strategy": "^0.2.31",
+    "@types/qr-image": "^3.2.0",
     "@types/request": "^2.0.3",
     "@types/request-promise-native": "^1.0.6",
     "@types/rimraf": "^2.0.2",
@@ -50,6 +51,7 @@
     "gulp-typescript": "^3.2.2",
     "mocha": "^3.5.3",
     "pump": "^1.0.2",
+    "qr-image": "^3.2.0",
     "request": "^2.82.0",
     "request-debug": "^0.2.0",
     "request-promise-native": "^1.0.4",
