--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "del": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-ejs-layouts": "^2.3.1",
     "gulp": "^3.9.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^4.3.1",
