--- a/package.json
+++ b/package.json
@@ -27,23 +27,28 @@
     "@types/body-parser": "^1.16.5",
     "@types/bunyan": "^1.8.2",
     "@types/chai": "^4.0.4",
+    "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.37",
+    "@types/express-session": "^1.15.3",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.43",
+    "@types/nedb": "^1.8.4",
+    "@types/node": "^7.0.46",
     "@types/passport": "^0.3.4",
     "@types/passport-strategy": "^0.2.31",
     "@types/qr-image": "^3.2.0",
-    "@types/request": "^2.0.3",
-    "@types/request-promise-native": "^1.0.6",
+    "@types/request": "^2.0.6",
+    "@types/request-promise-native": "^1.0.8",
     "@types/rimraf": "^2.0.2",
     "@types/serve-favicon": "^2.2.29",
     "bunyan": "^1.8.12",
     "chai": "^4.1.2",
+    "cookie-parser": "^1.4.3",
     "del": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
+    "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^4.3.1",
@@ -51,6 +56,7 @@
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.2",
     "mocha": "^3.5.3",
+    "nedb": "^1.8.0",
     "pump": "^1.0.2",
     "qr-image": "^3.2.0",
     "request": "^2.82.0",
@@ -59,7 +65,7 @@
     "rimraf": "^2.6.2",
     "serve-favicon": "^2.4.5",
     "ts-node": "~3.2.0",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.5.2"
   },
   "scripts": {
