Add first integration test for test site

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "man": "",
   "start": "node out/testSite/RunTestServer.js",
   "dependencies": {
+    "@types/ed25519": "0.0.0",
     "base64url": "^2.0.0",
     "body-parser": "^1.18.2",
     "ed25519": "0.0.4",
@@ -24,15 +25,15 @@
     "passport-strategy": "^1.0.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.5",
+    "@types/body-parser": "^1.16.6",
     "@types/bunyan": "^1.8.2",
     "@types/chai": "^4.0.4",
     "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.3.33",
-    "@types/express": "^4.0.37",
-    "@types/express-session": "^1.15.3",
+    "@types/express": "^4.0.38",
+    "@types/express-session": "^1.15.4",
     "@types/mocha": "^2.2.43",
-    "@types/nedb": "^1.8.4",
+    "@types/nedb": "^1.8.5",
     "@types/node": "^7.0.46",
     "@types/passport": "^0.3.4",
     "@types/passport-strategy": "^0.2.31",
@@ -54,7 +55,7 @@
     "gulp-mocha": "^4.3.1",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.2.2",
+    "gulp-typescript": "^3.2.3",
     "mocha": "^3.5.3",
     "nedb": "^1.8.0",
     "pump": "^1.0.2",
