--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.38",
+    "@types/express-ejs-layouts": "^2.3.0",
     "@types/express-session": "^1.15.4",
     "@types/mocha": "^2.2.43",
     "@types/nedb": "^1.8.5",
