--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/request-promise-native": "^1.0.9",
     "@types/rimraf": "^2.0.2",
     "@types/serve-favicon": "^2.2.29",
+    "@types/spdy": "^3.4.4",
     "bunyan": "^1.8.12",
     "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
@@ -66,6 +67,7 @@
     "request-promise-native": "^1.0.4",
     "rimraf": "^2.6.2",
     "serve-favicon": "^2.4.5",
+    "spdy": "^3.4.7",
     "ts-node": "~3.2.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
