Fix cert chain to properly chain from root Issue leaf cert containing an intranet 10. address for testing.

--- a/src/Certs/CertRequestTemplate.cnf
+++ b/src/Certs/CertRequestTemplate.cnf
@@ -2,6 +2,35 @@
 # Adapted from one of the answers at:
 # https://stackoverflow.com/questions/10175812/how-to-create-a-self-signed-certificate-with-openssl#10176685
 
+[ca]
+default_ca = root_ca
+
+# Certificate Authority options for the root cert.
+# RootCertDatabase.db tracks every certificate issued from the root CA.
+[root_ca]
+new_certs_dir = .
+database = ./RootCertDatabase.db
+default_md = sha256
+policy = common_ca_policy
+serial = ./RootSerial.seq
+
+[common_ca_policy]
+countryName = match
+stateOrProvinceName = match
+localityName = match
+organizationName = match
+organizationalUnitName = optional
+commonName = supplied
+
+# Certificate Authority options for the intermediate cert.
+# IntermediateCertDatabase.db tracks every certificate issued from the intermediate CA.
+[intermediate_ca]
+new_certs_dir = .
+database = ./IntermediateCertDatabase.db
+default_md = sha256
+policy = common_ca_policy
+serial = ./IntermediateSerial.seq
+
 [req]
 distinguished_name = req_distinguished_name
 x509_extensions = v3_leaf_policy
@@ -14,7 +43,7 @@ L = Bothell
 O = passport-sqrl
 CN = localhost
 
-# Root CA policy used from CreateRoot.cmd
+# Root CA cert policy used from CreateRoot.cmd and 
 # See https://jamielinux.com/docs/openssl-certificate-authority/create-the-root-pair.html
 [v3_root_ca_policy]
 subjectKeyIdentifier = hash
@@ -23,7 +52,7 @@ basicConstraints = critical, CA:true
 keyUsage = critical, digitalSignature, cRLSign, keyCertSign
 
 # Intermediate CA policy used from CreateIntermediate.cmd
-# See https://jamielinux.com/docs/openssl-certificate-authority/create-the-root-pair.html
+# See https://jamielinux.com/docs/openssl-certificate-authority/create-the-intermediate-pair.html
 [v3_intermediate_ca_policy]
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always,issuer
@@ -31,7 +60,7 @@ basicConstraints = critical, CA:true, pathlen:0
 keyUsage = critical, digitalSignature, cRLSign, keyCertSign
 
 # Leaf CA policy used from CreateLeaf.cmd
-# See https://jamielinux.com/docs/openssl-certificate-authority/create-the-root-pair.html
+# See https://jamielinux.com/docs/openssl-certificate-authority/sign-server-and-client-certificates.html
 [v3_leaf_policy]
 keyUsage = keyEncipherment, dataEncipherment
 extendedKeyUsage = serverAuth
@@ -44,3 +73,4 @@ authorityKeyIdentifier = keyid,issuer
 DNS.1 = localhost
 DNS.2 = 127.0.0.1
 DNS.3 = ::1
+DNS.4 = 10.0.0.30
