--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,15 @@
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
     "alwaysStrict": true,                     /* Parse in strict mode and emit "use strict" for each source file. */
                                               
-    /* Additional Checks */                   
+    /* Additional Checks */
     //"noUnusedLocals": true,                /* Report errors on unused locals. */
     //"noUnusedParameters": true,            /* Report errors on unused parameters. */
     "noImplicitReturns": true,               /* Report error when not all code paths in function return a value. */
-    "noFallthroughCasesInSwitch": true      /* Report errors for fallthrough cases in switch statement. */
+    "noFallthroughCasesInSwitch": true,      /* Report errors for fallthrough cases in switch statement. */
+    //"noResolve": true                      /* Do not add triple-slash references or module import targets to the list of compiled files. */
+    //"noStrictGenericChecks": true,         /* Disable strict checking of generic signatures in function types. */
+    //"skipDefaultLibCheck": true,             /* */
+    "skipLibCheck": true,                    /* Skip type checking of declaration files. Requires TypeScript version 2.0 or later. */
                                               
     /* Module Resolution Options */           
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
