--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/passport": "^0.3.5",
     "@types/passport-strategy": "^0.2.35",
     "base64url": "^2.0.0",
-    "ed25519": ">=0.0.4",
+    "ed25519": "git://github.com/erikma/ed25519.git#001935e5197c3acd98d09cbb5181481c4b62c005",
     "express": "^4.16.4",
     "passport": "^0.4.0",
     "passport-strategy": "^1.0.0"
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/bunyan": "^1.8.5",
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^4.1.7",
     "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.6.0",
     "@types/express-ejs-layouts": "^2.3.1",
@@ -52,9 +52,9 @@
     "@types/helmet": "0.0.37",
     "@types/mocha": "^2.2.48",
     "@types/nedb": "^1.8.6",
-    "@types/node": "^8.10.36",
+    "@types/node": "^8.10.38",
     "@types/qr-image": "^3.2.1",
-    "@types/request": "^2.47.1",
+    "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
     "@types/serve-favicon": "^2.2.30",
@@ -74,7 +74,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^3.2.4",
-    "helmet": "^3.14.0",
+    "helmet": "^3.15.0",
     "mocha": "^3.5.3",
     "nedb": "^1.8.0",
     "pump": "^1.0.3",
