--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/express": "^4.17.1",
     "@types/passport": "^0.3.5",
     "@types/passport-strategy": "^0.2.35",
-    "base64url": "^2.0.0",
+    "base64url": "^3.0.1",
     "ed25519": "git+https://github.com/gaoxiangxyz/ed25519.git",
     "express": "^4.17.1",
     "nan": "^2.14.0",
@@ -74,7 +74,7 @@
     "gulp-mocha": "^7.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^3.2.4",
+    "gulp-typescript": "^5.0.1",
     "helmet": "^3.21.1",
     "mocha": "^6.2.1",
     "nedb": "^1.8.0",
@@ -85,8 +85,8 @@
     "request-promise-native": "^1.0.7",
     "rimraf": "^2.7.1",
     "serve-favicon": "^2.5.0",
-    "spdy": "^3.4.7",
-    "ts-node": "~3.2.0",
+    "spdy": "^4.0.1",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   },
